--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,26 @@
-body{
+*{
     background: rgb(26, 24, 24);
-    color: rgb(213, 223, 219);
+    background-color: rgb(78, 68, 68);
+    color: rgb(88, 141, 211);
+}
+.App{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
 }
 
-.movie-app .row{
-    overflow-x: auto;
-    flex-wrap: nowrap;
+.search-box{
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
 }
 
-.image-container{
-    position: relative;
-    transition: transform 0.2s;
-}
-
-.image-container:hover{
-    cursor: pointer;
-    transform: scale(1,1);
+input{
+background:whitesmoke ;
+color: black;
+font-size: 1rem;
+font-weight: bolder;
 }
